--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,9 @@
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
               <img src="{% static 'images/notice.png' %}" alt="공지사항 아이콘">
               <div>공지사항</div>
-              <img src="{% static 'images/navArrow.png' %}" alt="메뉴 열림 아이콘">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
+                <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+              </svg>        
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
@@ -65,7 +67,9 @@
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
               <img src="{% static 'images/dispatchSystem.png' %}" alt="배차시스템 아이콘">
               <div>배차시스템</div>
-              <img src="{% static 'images/navArrow.png' %}" alt="메뉴 열림 아이콘">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
+                <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+              </svg>            
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
@@ -85,7 +89,9 @@
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
               <img src="{% static 'images/HRManagement.png' %}" alt="인사관리 아이콘">
               <div>인사관리</div>
-              <img src="{% static 'images/navArrow.png' %}" alt="메뉴 열림 아이콘">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
+                <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+              </svg>        
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
@@ -99,7 +105,9 @@
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
               <img src="{% static 'images/accountingSystem.png' %}" alt="경리시스템 아이콘">
               <div>매출관리</div>
-              <img src="{% static 'images/navArrow.png' %}" alt="메뉴 열림 아이콘">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
+                <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+              </svg>        
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
@@ -125,7 +133,9 @@
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
               <img src="{% static 'images/vehicleManagement.png' %}" alt="차량관리 아이콘">
               <div>차량관리</div>
-              <img src="{% static 'images/navArrow.png' %}" alt="메뉴 열림 아이콘">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
+                <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+              </svg>        
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
@@ -145,7 +155,9 @@
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
               <img src="{% static 'images/document.png' %}" alt="공지사항 아이콘">
               <div>서류관리</div>
-              <img src="{% static 'images/navArrow.png' %}" alt="메뉴 열림 아이콘">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
+                <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+              </svg>        
             </li>
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
