--- a/static/css/document/document.css
+++ b/static/css/document/document.css
@@ -231,13 +231,13 @@
     text-align: center;
     font-size: 1.4rem;
     padding: 0;
-    border-bottom: 0.1rem solid black;
-    border-right: 0.1rem solid black;
+    border-bottom: 0.1rem solid #D4D4D4;
+    border-right: 0.1rem solid #D4D4D4;
     box-sizing: border-box;
 }
 
 .documentTbody td:nth-child(1) {
-    border-left: 0.1rem solid black;
+    border-left: 0.1rem solid #D4D4D4;
 }
 
 .documentBox {
